Set up my local SQLite embedded database and got my database connection set up. Downloaded the necessary tools using NuGet. Ran a dotnet ef migration and generated those files, including the local db file.

--- a/aspdotnet-webapi-ef-1/api/appsettings.json
+++ b/aspdotnet-webapi-ef-1/api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=stocks.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
